# cookie-clicker-bot

./: .commitlintrc.json  .gitattributes  .gitignore  .lintstagedrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CookieClickerBot.spec  LICENSE  PUBLISH.md  QUICKSTART.md  README.md  cliff.toml  main.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  setup.py  tailwind.config.js  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONVENTIONAL_COMMITS.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  WORKFLOWS.md  labeler.yml  labels.yml  pr-type-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/pipeline-report/: action.yml
.github/actions/pr-statistics/: action.yml
.github/actions/pr-validation/: action.yml
.github/actions/quality-checks/: action.yml
.github/workflows/: auto-merge.yml  branch-protection.yml  build-executable.yml  build.yml  changelog.yml  ci-cd-orchestrator.yml  ci-pipeline.yml  ci.yml  codeql.yml  dependency-review.yml  lint.yml  pipeline-report.yml  pr-checks.yml  pr-labeler.yml  pr-management.yml  pr-triage.yml  quality-checks.yml  release-pipeline.yml  release.yml  semantic.yml  stale.yml  welcome.yml
.windsurf/rules/: development_rules.md  git_hooks_rules.md  linting_formatting_rules.md  package_management_rules.md  styling_rules.md  tauri_rules.md  typescript_rules.md  version_control_rules.md
scripts/: build.py  setup_hooks.py
src/: App.tsx  __init__.py  clicker.py  config.py  gui.py  main.py  overlay.py  window_finder.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: README.md  __init__.py  conftest.py  test_clicker.py  test_config.py  test_gui.py  test_overlay.py  test_window_finder.py
