[project]
name = "cookie-clicker-bot"
version = "1.0.0"
description = "Professional autoclicker for Cookie Clicker with GUI and real-time adjustments"
authors = [
    {name = "JoShMiQueL", email = "joshmiquel.cs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["cookie-clicker", "autoclicker", "bot", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "keyboard>=0.13.5",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/JoShMiQueL/cookie-clicker-bot"
Repository = "https://github.com/JoShMiQueL/cookie-clicker-bot"
Issues = "https://github.com/JoShMiQueL/cookie-clicker-bot/issues"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
