[project]
name = "cookie-clicker-bot"
version = "v1.0.1"
description = "Professional autoclicker for Cookie Clicker with GUI and real-time adjustments"
authors = [
    {name = "JoShMiQueL", email = "joshmiquel.cs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["cookie-clicker", "autoclicker", "bot", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "keyboard>=0.13.5",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
setup-hooks = "scripts.setup_hooks:main"

[project.urls]
Homepage = "https://github.com/JoShMiQueL/cookie-clicker-bot"
Repository = "https://github.com/JoShMiQueL/cookie-clicker-bot"
Issues = "https://github.com/JoShMiQueL/cookie-clicker-bot/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "scripts"]
